Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
        min-height: 12px;
      }
     </style>
+
   </head>
 
   <body>
@@ -37,5 +38,6 @@
         </div>
       </div>
     </div>
+    <script src="js/index.js"></script>
   </body>
 </html>
